# gildedrose-refactoring-kata

./: .bettercodehub.yml  .gitignore  README.md
cpp/: CMakeLists.txt  GildedRose.cc  Makefile
